tests/NormalTests/paczka1/small_fuzzy/83760612.err
Error in line 6: q2n5szWbS87370,3
Error in line 5: q2n5szWb S873 24,0
Error in line 8: q2n5szWb S105 80,8
